<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">StageFever</string>
    <string name="copyright_fr3ts0n" translatable="false">Copyright © by fr3ts0n</string>
    <string name="url_app_mainpage" translatable="false">https://github.com/fr3ts0n/StageFever</string>
    <string name="url_app_releases" translatable="false">https://github.com/fr3ts0n/StageFever/releases</string>
    <string name="donation">Support project …</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Title</string>
    <string name="artist">Artist</string>
    <string name="bpm">BPM</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">&lt;&lt;</string>
    <string name="import_scv">Import CSV</string>
    <string name="saving_data">saving data …</string>
    <string name="saved">saved</string>
    <string name="load">load</string>
    <string name="loaded">loaded</string>
    <string name="back_again_to_exit">Press back again to close this app</string>
    <string name="next_song">Next song</string>
    <string name="previous_song">Previous song</string>
    <string name="font_size_notes">Font size of notes [dp]</string>
    <string name="font_size_description">Font size in dp</string>
    <string name="metronome_visible">Metronome visible</string>
    <string name="metronome_description">show / hide metronome on bottom of screen</string>
    <string name="csv_import">CSV import</string>
    <string name="display">Display</string>
    <string name="csv_field_delimiter_sum">Delimiter char between CSV fields</string>
    <string name="csv_field_delimiter">CSV field delimiter</string>
    <string name="release_history">Release History …</string>

</resources>
