<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (C) Copyright 2015-2016 by fr3ts0n <erwin.scheuch-heilig@gmx.at>
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation; either version 2 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston,
  ~ MA 02111-1307 USA
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/display">

        <EditTextPreference
            android:defaultValue="24"
            android:inputType="numberDecimal"
            android:key="font_size_notes"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/font_size_description"
            android:title="@string/font_size_notes"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="metronome_visible"
            android:summary="@string/metronome_description"
            android:title="@string/metronome_visible"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/csv_import">

        <ListPreference
            android:entries="@array/csv_field_delimiter"
            android:entryValues="@array/csv_field_delimiter_val"
            android:key="csv_field_delimiter"
            android:summary="@string/csv_field_delimiter_sum"
            android:title="@string/csv_field_delimiter"/>
    </PreferenceCategory>

</PreferenceScreen>